Make header fixed on tablet view and fix bug when clicking arrow to scroll to form

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -16,7 +16,6 @@
 
 /* Desktop layout */
 @media only screen and (min-width: 1024px) {
-
     .header-avatar {
         padding-top: 60px;
         margin-left: 1.5em;
@@ -30,7 +29,16 @@
     .header-avatar {
         width: 100%;
         padding-top: 100px;
-        margin-bottom: none;
-        margin-left: none;
+    }
+    .header-fixed {
+        position: sticky;
+        top: 0;
+    }
+    #tweets::before {
+        content: '';
+        display: block;
+        height: 500px;
+        margin-top: -500px;
+        visibility: hidden;
     }
 }
